Imported and Aligned CSS style and bootstrap also fixed a bug with Image Upload

--- a/Web/BuriStore.Web/wwwroot/css/site.css
+++ b/Web/BuriStore.Web/wwwroot/css/site.css
@@ -54,4 +54,5 @@ body {
     /* Set the fixed height of the footer here */
     height: 60px;
     line-height: 60px; /* Vertically center the text there */
+    margin-bottom: 0rem !important;
 }
